[gd_scene load_steps=7 format=4 uid="uid://drosmg331bt1o"]

[ext_resource type="PackedScene" uid="uid://dk0njse36dbkx" path="res://assets/tile_maps/tile_map_layer.tscn" id="1_oofy8"]
[ext_resource type="Script" uid="uid://jp31f6t2xtd" path="res://scenes/battle_scene/battle_scene.gd" id="1_qc2rq"]
[ext_resource type="PackedScene" uid="uid://37kkea5x26j6" path="res://units/enemy/enemy.tscn" id="2_v2pga"]
[ext_resource type="PackedScene" uid="uid://7ymmtavept26" path="res://units/player/player.tscn" id="6_8r7ii"]
[ext_resource type="Texture2D" uid="uid://bc5lfaua2ptgi" path="res://assets/ui/battle_cursor.png" id="6_gp27x"]
[ext_resource type="PackedScene" uid="uid://cn25pb2mwr4bj" path="res://ui/actions_holder/actions_holder.tscn" id="7_8r7ii"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_qc2rq")

[node name="TileMapLayer" parent="." instance=ExtResource("1_oofy8")]

[node name="TerrainLayer" parent="TileMapLayer" index="0"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAA0AAAAAAAEAAAAAAA0AAAAAAAIAAAAAAA0AAAAAAAMAAAAAAA0AAAAAAAQAAAAAAA0AAAAAAAUAAAAAAA0AAAAAAAYAAAAAAA0AAAAAAAcAAAAAAA0AAAAAAAgAAAAAAA0AAAAAAAkAAAAAAA0AAAAAAAoAAAAAAA0AAAAAAAsAAAAAAA0AAAABAAAAAAAAAA0AAAABAAEAAAAAAA0AAAABAAIAAAAAAA0AAAABAAMAAAAAAA0AAAABAAQAAAAAAA0AAAABAAUAAAAAAA0AAAABAAYAAAAAAA0AAAABAAcAAAAAAA0AAAABAAgAAAAAAA0AAAABAAkAAAAAAA0AAAABAAoAAAAAAA0AAAABAAsAAAAAAA0AAAACAAAAAAAAAA0AAAACAAEAAAAAAA0AAAACAAIAAAAAAA0AAAACAAMAAAAAAA0AAAACAAQAAAAAAA0AAAACAAUAAAAAAA0AAAACAAYAAAAAAA0AAAACAAcAAAAAAA0AAAACAAgAAAAAAA0AAAACAAkAAAAAAA0AAAACAAoAAAAAAA0AAAACAAsAAAAAAA0AAAADAAAAAAAAAA0AAAADAAEAAAAAAA0AAAADAAIAAAAAAA0AAAADAAMAAAAAAA0AAAADAAQAAAAAAA0AAAADAAUAAAAAAA0AAAADAAYAAAAAAA0AAAADAAcAAAAAAA0AAAADAAgAAAAAAA0AAAADAAkAAAAAAA0AAAADAAoAAAAAAA0AAAADAAsAAAAAAA0AAAAEAAAAAAAAAA0AAAAEAAEAAAAAAA0AAAAEAAIAAAAAAA0AAAAEAAMAAAAAAA0AAAAEAAQAAAAAAA0AAAAEAAUAAAAAAA0AAAAEAAYAAAAAAA0AAAAEAAcAAAAAAA0AAAAEAAgAAAAAAA0AAAAEAAkAAAAAAA0AAAAEAAoAAAAAAA0AAAAEAAsAAAAAAA0AAAAFAAAAAAAAAA0AAAAFAAEAAAAAAA0AAAAFAAIAAAAAAA0AAAAFAAMAAAAAAA0AAAAFAAQAAAAAAA0AAAAFAAUAAAAAAA0AAAAFAAYAAAAAAA0AAAAFAAcAAAAAAA0AAAAFAAgAAAAAAA0AAAAFAAkAAAAAAA0AAAAFAAoAAAAAAA0AAAAFAAsAAAAAAA0AAAAGAAAAAAAAAA0AAAAGAAEAAAAAAA0AAAAGAAIAAAAAAA0AAAAGAAMAAAAAAA0AAAAGAAQAAAAAAA0AAAAGAAUAAAAAAA0AAAAGAAYAAAAAAA0AAAAGAAcAAAAAAA0AAAAGAAgAAAAAAA0AAAAGAAkAAAAAAA0AAAAGAAoAAAAAAA0AAAAGAAsAAAAAAA0AAAAHAAAAAAAAAA0AAAAHAAEAAAAAAA0AAAAHAAIAAAAAAA0AAAAHAAMAAAAAAA0AAAAHAAQAAAAAAA0AAAAHAAUAAAAAAA0AAAAHAAYAAAAAAA0AAAAHAAcAAAAAAA0AAAAHAAgAAAAAAA0AAAAHAAkAAAAAAA0AAAAHAAoAAAAAAA0AAAAHAAsAAAAAAA0AAAAIAAAAAAAAAA0AAAAIAAEAAAAAAA0AAAAIAAIAAAAAAA0AAAAIAAMAAAAAAA0AAAAIAAQAAAAAAA0AAAAIAAUAAAAAAA0AAAAIAAYAAAAAAA0AAAAIAAcAAAAAAA0AAAAIAAgAAAAAAA0AAAAIAAkAAAAAAA0AAAAIAAoAAAAAAA0AAAAIAAsAAAAAAA0AAAAJAAAAAAAAAA0AAAAJAAEAAAAAAA0AAAAJAAIAAAAAAA0AAAAJAAMAAAAAAA0AAAAJAAQAAAAAAA0AAAAJAAUAAAAAAA0AAAAJAAYAAAAAAA0AAAAJAAcAAAAAAA0AAAAJAAgAAAAAAA0AAAAJAAkAAAAAAA0AAAAJAAoAAAAAAA0AAAAJAAsAAAAAAA0AAAAKAAAAAAAAAA0AAAAKAAEAAAAAAA0AAAAKAAIAAAAAAA0AAAAKAAMAAAAAAA0AAAAKAAQAAAAAAA0AAAAKAAUAAAAAAA0AAAAKAAYAAAAAAA0AAAAKAAcAAAAAAA0AAAAKAAgAAAAAAA0AAAAKAAkAAAAAAA0AAAAKAAoAAAAAAA0AAAAKAAsAAAAAAA0AAAALAAAAAAAAAA0AAAALAAEAAAAAAA0AAAALAAIAAAAAAA0AAAALAAMAAAAAAA0AAAALAAQAAAAAAA0AAAALAAUAAAAAAA0AAAALAAYAAAAAAA0AAAALAAcAAAAAAA0AAAALAAgAAAAAAA0AAAALAAkAAAAAAA0AAAALAAoAAAAAAA0AAAALAAsAAAAAAA0AAAAMAAAAAAAAAA0AAAAMAAEAAAAAAA0AAAAMAAIAAAAAAA0AAAAMAAMAAAAAAA0AAAAMAAQAAAAAAA0AAAAMAAUAAAAAAA0AAAAMAAYAAAAAAA0AAAAMAAcAAAAAAA0AAAAMAAgAAAAAAA0AAAAMAAkAAAAAAA0AAAAMAAoAAAAAAA0AAAAMAAsAAAAAAA0AAAANAAAAAAAAAA0AAAANAAEAAAAAAA0AAAANAAIAAAAAAA0AAAANAAMAAAAAAA0AAAANAAQAAAAAAA0AAAANAAUAAAAAAA0AAAANAAYAAAAAAA0AAAANAAcAAAAAAA0AAAANAAgAAAAAAA0AAAANAAkAAAAAAA0AAAANAAoAAAAAAA0AAAANAAsAAAAAAA0AAAAOAAAAAAAAAA0AAAAOAAEAAAAAAA0AAAAOAAIAAAAAAA0AAAAOAAMAAAAAAA0AAAAOAAQAAAAAAA0AAAAOAAUAAAAAAA0AAAAOAAYAAAAAAA0AAAAOAAcAAAAAAA0AAAAOAAgAAAAAAA0AAAAOAAkAAAAAAA0AAAAOAAoAAAAAAA0AAAAOAAsAAAAAAA0AAAAPAAAAAAAAAA0AAAAPAAEAAAAAAA0AAAAPAAIAAAAAAA0AAAAPAAMAAAAAAA0AAAAPAAQAAAAAAA0AAAAPAAUAAAAAAA0AAAAPAAYAAAAAAA0AAAAPAAcAAAAAAA0AAAAPAAgAAAAAAA0AAAAPAAkAAAAAAA0AAAAPAAoAAAAAAA0AAAAPAAsAAAAAAA0AAAAQAAAAAAAAAA0AAAAQAAEAAAAAAA0AAAAQAAIAAAAAAA0AAAAQAAMAAAAAAA0AAAAQAAQAAAAAAA0AAAAQAAUAAAAAAA0AAAAQAAYAAAAAAA0AAAAQAAcAAAAAAA0AAAAQAAgAAAAAAA0AAAAQAAkAAAAAAA0AAAAQAAoAAAAAAA0AAAAQAAsAAAAAAA0AAAARAAAAAAAAAA0AAAARAAEAAAAAAA0AAAARAAIAAAAAAA0AAAARAAMAAAAAAA0AAAARAAQAAAAAAA0AAAARAAUAAAAAAA0AAAARAAYAAAAAAA0AAAARAAcAAAAAAA0AAAARAAgAAAAAAA0AAAARAAkAAAAAAA0AAAARAAoAAAAAAA0AAAARAAsAAAAAAA0AAAASAAAAAAAAAA0AAAASAAEAAAAAAA0AAAASAAIAAAAAAA0AAAASAAMAAAAAAA0AAAASAAQAAAAAAA0AAAASAAUAAAAAAA0AAAASAAYAAAAAAA0AAAASAAcAAAAAAA0AAAASAAgAAAAAAA0AAAASAAkAAAAAAA0AAAASAAoAAAAAAA0AAAASAAsAAAAAAA0AAAATAAAAAAAAAA0AAAATAAEAAAAAAA0AAAATAAIAAAAAAA0AAAATAAMAAAAAAA0AAAATAAQAAAAAAA0AAAATAAUAAAAAAA0AAAATAAYAAAAAAA0AAAATAAcAAAAAAA0AAAATAAgAAAAAAA0AAAATAAkAAAAAAA0AAAATAAoAAAAAAA0AAAATAAsAAAAAAA0AAAA=")

[node name="Enemy" parent="." instance=ExtResource("2_v2pga")]
position = Vector2(400, 112)

[node name="Enemy2" parent="." instance=ExtResource("2_v2pga")]
position = Vector2(400, 176)

[node name="Enemy3" parent="." instance=ExtResource("2_v2pga")]
position = Vector2(400, 240)

[node name="BattleCursor" type="Sprite2D" parent="."]
position = Vector2(352, -32)
texture = ExtResource("6_gp27x")

[node name="Player" parent="." instance=ExtResource("6_8r7ii")]
position = Vector2(272, 176)
current_state = 2

[node name="CursorRestPos" type="Marker2D" parent="."]
position = Vector2(224, -160)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 192)
zoom = Vector2(1.5, 1.5)

[node name="ActionsHolder" parent="." instance=ExtResource("7_8r7ii")]
position = Vector2(272, 176)

[node name="ComboContainer" type="Node2D" parent="."]
position = Vector2(320, 18)

[node name="ComboParent" type="Node" parent="."]

[node name="Piece01" type="Marker2D" parent="ComboParent"]

[editable path="TileMapLayer"]
